# geocontext

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile  QUICKSTART.md  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  start-geocontext.sh
.githooks/: pre-push
.github/workflows/: deploy.yml
examples/: messages.md
src/: health.rs  main.rs  startup.rs
src/circuit_breaker/: README.md  breaker.rs  mod.rs  state.rs
src/config/: mod.rs
src/domain/: event.rs  mod.rs
src/enrichers/: README.md  h3.rs
src/input/: consumer.rs  mod.rs
src/kafka/: consumer.rs  mod.rs  producer.rs
src/models/: mod.rs
src/output/: mod.rs  producer.rs
src/pipeline/: processor.rs
