[package]
name = "geocontext"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }

# Kafka client
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "sasl"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# H3 geospatial indexing
h3o = "0.8.0"

# Utilities
parking_lot = "0.12"